--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,20 @@
-title: Hello, world! I'm David Freeman
+title: Hello, I'm David Trentham with Kundalini Coding
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/main" # the subpath of your site, e.g. /blog
+url: "http://www.kundalinicoding.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-twitter: # add your Twitter handle
-facebook: # add your Facebook handle
-github: artemsheludko # add your Github handle
-linkedin: # add your Linkedin handle
-email: # add your Email address
-
-# Disqus
-discus-identifier: mr-brown # add your discus identifier
+author: David Trentham # add your name
+author-img:  # add your photo
+about-author: I love to code but I like to have a balanced life. # add description
+twitter: @DavidTrentham85 
+github: DavidTrentham # add your Github handle
+linkedin:David-Trentham # add your Linkedin handle
+email: David.Trentham@protonmail.com
 
 # Tracker
 analytics: # Google Analytics
