--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ url: "http://www.kundalinicoding.com" # the base hostname & protocol for your si
 author: David Trentham # add your name
 author-img:  # add your photo
 about-author: I love to code but I like to have a balanced life. # add description
-twitter: @DavidTrentham85 
+twitter: DavidTrentham85 
 github: DavidTrentham # add your Github handle
-linkedin:David-Trentham # add your Linkedin handle
+linkedin: David-Trentham # add your Linkedin handle
 email: David.Trentham@protonmail.com
 
 # Tracker
