--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,17 @@
-title: Hello, I'm David Trentham with Kundalini Coding
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Kundalini Coding, practicing balanced codin g.
+description: "Kundalini Coding is a blog I started to share my environmental coding practices. I strive to maintain a healthy lifestyle in terms of Mind, Body, and Spirit; and here is where I attempt to apply those to coding."
 permalink: ':title/'
-baseurl: "/main" # the subpath of your site, e.g. /blog
-url: "http://www.kundalinicoding.com" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: # the subpath of your site, e.g. /blog
+url: "http://www.kundalinicoding.com" # the base hostname & protocol for your site, e.g. http://example.com:
 
 # Author Settings
 author: David Trentham # add your name
 author-img:  # add your photo
-about-author: I love to code but I like to have a balanced life. # add description
+about-author: Computer Science Major, former United States Marine, and travel enthusiast. # add description
 twitter: DavidTrentham85 
 github: DavidTrentham # add your Github handle
 linkedin: David-Trentham # add your Linkedin handle
 email: David.Trentham@protonmail.com
-
-# Tracker
-analytics: # Google Analytics
 
 # Build Settings
 markdown: kramdown
@@ -29,5 +23,3 @@ paginate: 8
 paginate_path: "/page/:num"
 
 exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
-
-theme: jekyll-theme-cayman
