--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Kundalini Coding, practicing balanced codin g.
-description: "Kundalini Coding is a blog I started to share my environmental coding practices. I strive to maintain a healthy lifestyle in terms of Mind, Body, and Spirit; and here is where I attempt to apply those to coding."
-permalink: ':title/'
+title: Kundalini Coding, practicing balanced coding.
+description: Kundalini Coding is a blog I started to share my environmental coding practices. I strive to maintain a healthy lifestyle in terms of Mind, Body, and Spirit; and here is where I attempt to apply those to coding.
+permalink: :title/
 baseurl: # the subpath of your site, e.g. /blog
-url: "http://www.kundalinicoding.com" # the base hostname & protocol for your site, e.g. http://example.com:
+url: http://www.kundalinicoding.com # the base hostname & protocol for your site, e.g. http://example.com:
 
 # Author Settings
 author: David Trentham # add your name
@@ -20,6 +20,6 @@ plugins:
   - jekyll-paginate
 
 paginate: 8
-paginate_path: "/page/:num"
+paginate_path: /page/:num
 
 exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
