--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Kundalini Coding, practicing balanced coding.
 description: Kundalini Coding is a blog I started to share my environmental coding practices. I strive to maintain a healthy lifestyle in terms of Mind, Body, and Spirit; and here is where I attempt to apply those to coding.
 permalink: :title/
 baseurl: # the subpath of your site, e.g. /blog
-url: http://www.kundalinicoding.com # the base hostname & protocol for your site, e.g. http://example.com:
+url: "http://www.kundalinicoding.com" # the base hostname & protocol for your site, e.g. http://example.com:
 
 # Author Settings
 author: David Trentham # add your name
