--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "http://www.kundalinicoding.com" # the base hostname & protocol for your si
 # Author Settings
 author: David Trentham # add your name
 author-img:  # add your photo
-about-author: Computer Science Major, former United States Marine, and travel enthusiast. # add description
+about-author: Computer Science Major, Former United States Marine, and Travel Enthusiast. # add description
 twitter: DavidTrentham85 
 github: DavidTrentham # add your Github handle
 linkedin: David-Trentham # add your Linkedin handle
